tests/ui/const-generics/mgca/unused_speculative_def_id.stderr
error[E0425]: cannot find value `ERR` in this scope
  --> $DIR/unused_speculative_def_id.rs:20:16
   |
LL |     field: A<{ ERR::<const { 1 }> }>,
   |                ^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
